# ucl-open-y-maze

./: .copier-answers.yml  pyproject.toml
.bonsai/: Bonsai.config  NuGet.config
examples/: rig.py  session.py  task.py
local_packages/: UclOpen.Core.42.42.42-dev0.nupkg  UclOpen.Devices.42.42.42-dev0.nupkg  UclOpen.Logging.42.42.42-dev0.nupkg  UclOpen.Video.42.42.42-dev0.nupkg  UclOpen.Vision.42.42.42-dev0.nupkg
scripts/: deploy.ps1
src/: Extensions.csproj  main.bonsai
src/DataSchemas/: ucl_open_y_maze.json
src/Extensions/: PointListToRegion.cs  UclOpenYMaze.Generated.cs
src/ucl_open_y_maze/: regenerate.py  rig.py  task.py
