[build-system]
requires = ["uv_build>=0.8.22"]
build-backend = "uv_build"

[project]
name = "ucl-open-y-maze"
description = "A library that defines a ucl-open data schema for the y-maze experiment."
authors = [ {name = "RoboDoig", email = "a.erskine@neurogears.org"}]
license = "MIT"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
]
version = "0.0.0-rc1"
readme = {file = "README.md", content-type = "text/markdown"}

dependencies = [
  "swc-aeon>=0.2.0",
  "ucl-open",
  "pydantic-settings"
]

# [project.urls]
# Documentation = "https://ucl-open.github.io/Ucl.Open.YMaze/"
# Repository = "https://github.com/UclOpen/Ucl.Open.YMaze/"
# Issues = "https://github.com/UclOpen/Ucl.Open.YMaze/issues"
# Changelog = "https://github.com/UclOpen/Ucl.Open.YMaze/releases"
[project.scripts]
y-maze = "ucl_open_y_maze.cli:main"
regenerate-schemas = "ucl_open_y_maze.regenerate:main"

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.codespell]
skip = '.git,*.pdf,*.svg,./bonsai,*.bonsai,./docs/_build,uv.lock,*Generated.cs'
ignore-words-list = 'nd'

[tool.uv]
required-version = '>=0.8.4'

[tool.uv.sources]
ucl-open = {git = "https://github.com/ucl-open/ucl-open", branch = "main"}
swc-aeon = { git = "https://github.com/SainsburyWellcomeCentre/aeon_api.git", branch = "main" }